fix alignment cards

--- a/src/sass/blocks/card.sass
+++ b/src/sass/blocks/card.sass
@@ -1,7 +1,9 @@
 .card
-    margin-bottom: 2rem
-    min-height: 100%
-    
+    display: flex
+    flex-direction: column
+    padding-bottom: 2rem
+    height: 32rem
+
     &-img
         display: flex
         justify-content: center
@@ -13,24 +15,38 @@
         background-color: #fce000
         border-radius: 0.3rem 0.3rem 0 0
 
+    OneC
+
     &-info
+        display: flex
+        flex-direction: column
+        align-items: flex-start
+        flex-grow: 1
+
         border-radius: 0 0 0.3rem 0.3rem
         border: 0.1rem solid #eaeae2
         border-top: none
 
         padding-top: 1.9rem
-        padding-bottom: 1.4rem
-        padding-left: 1.4rem
-        padding-right: 1.4rem
+        padding-bottom: 1.5rem
+        padding-left: 1.5rem
+        padding-right: 1.5rem
 
     &__title
         margin-bottom: 1.6rem
+
+    &-wrapper
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        flex-grow: 1
+        align-items: flex-start
 
     &__desc
         font-size: 1.4rem
         line-height: 1.4
 
-        margin-bottom: 2.8rem
+        margin-bottom: 0.8rem
 
     &__btn
         display: flex
@@ -47,6 +63,7 @@
         font-size: 1.4rem
         line-height: 1.4
         color: #fff
+        font-weight: bold
 
         cursor: pointer
 
